--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,14 +1,14 @@
-<div class="pf-c-card pf-u-my-md">
-  <div class="pf-c-card__header">
-    <div class="pf-c-card__header-main pf-u-w-100">
+<div class="pf-v6-c-card pf-v6-u-my-md">
+  <div class="pf-v6-c-card__header">
+    <div class="pf-v6-c-card__header-main pf-v6-u-w-100">
       <img
         src="{{ .Destination | safeURL }}"
-        class="pf-u-w-100"
+        class="pf-v6-u-w-100"
         alt="{{ .Text }}"
       />
     </div>
   </div>
-  <div class="pf-c-card__footer pf-x-u-text-center" aria-hidden="true">
+  <div class="pf-v6-c-card__footer pf-v6-x-u-text-center" aria-hidden="true">
     {{ .Text }}
   </div>
 </div>
