--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,20 +1,20 @@
-<div class="pf-c-page__main-body pf-u-px-lg pf-u-px-0-on-xl pf-u-py-lg">
+<div class="pf-v6-c-page__main-body pf-v6-u-px-lg pf-v6-u-px-0-on-xl pf-v6-u-py-lg">
   <div
-    class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width"
+    class="pf-v6-l-flex pf-m-justify-content-space-between pf-v6-x-c-footer--max-width"
   >
-    <div class="pf-l-flex__item">
+    <div class="pf-v6-l-flex__item">
       <a
         href="{{ .Site.Data.site.source }}"
         target="_blank"
         rel="noopener"
-        class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
         >© {{ now.Year }} {{ .Site.Data.site.author }}</a
       >
     </div>
-    <div class="pf-l-flex__item">
+    <div class="pf-v6-l-flex__item">
       <a
         href="/imprint"
-        class="pf-x-m-no-highlight--dark pf-x-u-text-shadow-sm pf-x-u-text--freestanding"
+        class="pf-v6-x-m-no-highlight--dark pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
         >Imprint</a
       >
     </div>
