--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,33 +1,33 @@
 <div
-  class="pf-c-card pf-c-card--overlay pf-c-card--lastcommit pf-u-py-xs pf-u-px-lg pf-u-px-xs-on-md"
+  class="pf-v6-c-card pf-v6-c-card--overlay pf-v6-c-card--lastcommit pf-v6-u-py-xs pf-v6-u-px-lg pf-v6-u-px-xs-on-md"
   id="{{ .ID }}"
 >
-  <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
+  <div class="pf-v6-c-card__body pf-v6-u-p-0 pf-v6-u-display-flex">
     <a
-      class="lastcommit__user__url pf-x-u-hoverable pf-x-u-hoverable--rotate"
+      class="lastcommit__user__url pf-v6-x-u-hoverable pf-v6-x-u-hoverable--rotate"
       target="_blank"
     >
       <img
         src="/img/octocat.svg"
-        class="pf-u-p-md pf-x-octocat pf-u-display-none pf-u-display-flex-on-md pf-u-px-md"
+        class="pf-v6-u-p-md pf-v6-x-octocat pf-v6-u-display-none pf-v6-u-display-flex-on-md pf-v6-u-px-md"
       />
     </a>
 
     <div class="lastcommit">
-      <div class="pf-c-code-block pf-x-u-transparent pf-u-p-sm pf-u-pl-xs">
-        <div class="pf-c-code-block__header">
+      <div class="pf-v6-c-code-block pf-v6-x-u-transparent pf-v6-u-p-sm pf-v6-u-pl-xs">
+        <div class="pf-v6-c-code-block__header">
           <div
-            class="pf-c-code-block__actions pf-c-code-block__actions--info pf-u-flex-direction-column pf-u-flex-direction-row-on-lg"
+            class="pf-v6-c-code-block__actions pf-v6-c-code-block__actions--info pf-v6-u-flex-direction-column pf-v6-u-flex-direction-row-on-lg"
           >
-            <div class="pf-c-code-block__actions-item pf-u-py-sm pf-u-px-md">
+            <div class="pf-v6-c-code-block__actions-item pf-v6-u-py-sm pf-v6-u-px-md">
               <span>Last GitHub commit by</span>
-              <a class="lastcommit__user__url pf-u-ml-xs" target="_blank">
+              <a class="lastcommit__user__url pf-v6-u-ml-xs" target="_blank">
                 <img id="lastcommit__user__url__img" />
               </a>
             </div>
 
             <div
-              class="pf-c-code-block__actions-item pf-u-pb-sm pf-u-pt-sm-on-lg pf-u-pr-md"
+              class="pf-v6-c-code-block__actions-item pf-v6-u-pb-sm pf-v6-u-pt-sm-on-lg pf-v6-u-pr-md"
             >
               <a class="lastcommit__repo__url" target="_blank">
                 <i class="fas fa-code-branch" aria-hidden="true"></i>
@@ -39,10 +39,10 @@
             </div>
           </div>
         </div>
-        <div class="pf-c-code-block__content">
+        <div class="pf-v6-c-code-block__content">
           <pre
-            class="pf-c-code-block__pre pf-x-u-nowrap"
-          ><code class="pf-c-code-block__code lastcommit__commit__message"></code></pre>
+            class="pf-v6-c-code-block__pre pf-v6-x-u-nowrap"
+          ><code class="pf-v6-c-code-block__code lastcommit__commit__message"></code></pre>
         </div>
       </div>
     </div>
