--- a/layouts/partials/spotifystatus.html
+++ b/layouts/partials/spotifystatus.html
@@ -1,23 +1,23 @@
 <a
   id="{{ .ID }}"
   target="_blank"
-  class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-x-u-hoverable-parent spotifystatus pf-u-p-sm pf-u-ml-lg pf-u-ml-0-on-xl"
+  class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-c-page__header-brand-link--no-decoration pf-v6-x-u-hoverable-parent spotifystatus pf-v6-u-p-sm pf-v6-u-ml-lg pf-v6-u-ml-0-on-xl"
 >
   <img
     src="/img/spotify.svg"
     alt="Spotify logo"
-    class="pf-c-avatar pf-u-mr-sm pf-c-avatar--navbar pf-x-spotify"
+    class="pf-v6-c-avatar pf-v6-u-mr-sm pf-v6-c-avatar--navbar pf-v6-x-spotify"
   />
 
   <div>
     <div
-      class="pf-u-font-size-xs pf-x-u-text--freestanding spotifystatus__preamble"
+      class="pf-v6-u-font-size-xs pf-v6-x-u-text--freestanding spotifystatus__preamble"
     >
       I'm currently listening to ...
     </div>
 
     <div
-      class="pf-u-font-size-sm pf-u-font-weight-bold pf-x-u-navbar__title pf-x-u-text--freestanding spotifystatus__name"
+      class="pf-v6-u-font-size-sm pf-v6-u-font-weight-bold pf-v6-x-u-navbar__title pf-v6-x-u-text--freestanding spotifystatus__name"
     ></div>
   </div>
 </a>
